Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -94,5 +94,5 @@ steps:
     tagSource: 'gitTag'
     changeLogCompareToRelease: 'lastFullRelease'
     changeLogType: 'commitBased'
-    gitHubConnection: $(github_pat)
+    gitHubConnection: 'GuruDhanush'
     addChangeLog: true
